separated from core

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,32 +1,27 @@
 [buildout]
-develop = .
+develop = . ../zagy-article-extract
 find-links = http://uter.gocept.com/mirror/
              http://uter.gocept.com/~ctheune/download.zope.org/distribution
 extends = 
     http://svn.gocept.com/repos/gocept/gocept.lxml/trunk/buildout-lxml.cfg
     http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
 parts = libxml2 libxslt lxml
-        test i18n profile importchecker
+        test i18n importchecker
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zeit.cms [test]
+eggs = zeit.content.article[test]
 defaults = ['--tests-pattern', '^f?test$', 
             '-v', '-c']
-[profile]
-recipe = zc.recipe.testrunner
-eggs = zeit.cms [test]
-defaults = ['--tests-pattern', '^test_profiling$', 
-            '-v', '--profile=cProfile']
 
 [i18n]
 recipe = lovely.recipe:i18n
-package = zeit.cms
-domain = zeit.cms
+package = zeit.content.article
+domain = zeit.content.article
 location = src/zeit
-output = cms/locales
+output = content/article/locales
 zcml =
-  <include package="zeit.cms" file="integration.zcml" />
+  <include package="zeit.content.article" file="ftesting.zcml" />
 
 [importchecker]
 recipe = zc.recipe.egg
