remove temp develop

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-develop = . ../zagy-article-extract
+develop = .
 find-links = http://uter.gocept.com/mirror/
              http://uter.gocept.com/~ctheune/download.zope.org/distribution
 extends = 
