--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,9 @@ extends =
 parts = libxml2 libxslt lxml
         test i18n importchecker
 
+[stable-zope]
+zope.testbrowser = 3.4.0
+
 [test]
 recipe = zc.recipe.testrunner
 eggs = zeit.content.article[test]
