lxml mit rezept bauen
xml korrigiert, so dass die neue libxml2 nicht meckert

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,13 +3,18 @@ develop = .
 find-links = http://uter.gocept.com/mirror/
              http://uter.gocept.com/~ctheune/download.zope.org/distribution
 extends = 
-    http://svn.gocept.com/repos/gocept/gocept.lxml/trunk/buildout-lxml.cfg
     http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
-parts = libxml2 libxslt lxml
+parts = lxml
         test i18n importchecker
 
 [stable-zope]
 zope.testbrowser = 3.4.0
+
+[lxml]
+recipe = plone.recipe.lxml>0.2
+egg = lxml
+libxml2-url = http://xmlsoft.org/sources/libxml2-2.7.2.tar.gz
+libxslt-url = http://xmlsoft.org/sources/libxslt-1.1.24.tar.gz
 
 [test]
 recipe = zc.recipe.testrunner
