buildout auf den neusten stand gebracht

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,14 +1,8 @@
 [buildout]
 develop = .
-find-links = http://uter.gocept.com/mirror/
-             http://uter.gocept.com/~ctheune/download.zope.org/distribution
-extends = 
-    http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
+extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
 parts = lxml
         test i18n importchecker
-
-[stable-zope]
-zope.testbrowser = 3.4.0
 
 [lxml]
 recipe = plone.recipe.lxml>0.2
