--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,7 +5,7 @@ parts = lxml
         test i18n importchecker
 
 [lxml]
-recipe = plone.recipe.lxml>0.2
+recipe = z3c.recipe.staticlxml
 egg = lxml
 libxml2-url = http://xmlsoft.org/sources/libxml2-2.7.2.tar.gz
 libxslt-url = http://xmlsoft.org/sources/libxslt-1.1.24.tar.gz
