--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,7 +12,7 @@ libxslt-url = http://xmlsoft.org/sources/libxslt-1.1.24.tar.gz
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zeit.content.article[test]
+eggs = zeit.content.article
 defaults = ['--tests-pattern', '^f?test$', 
             '-v', '-c']
 
