- Anpassungen für zeit.cms 1.20
- Alle ``test.py`` nach ``tests.py`` umbenannt.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,8 +13,7 @@ libxslt-url = http://xmlsoft.org/sources/libxslt-1.1.24.tar.gz
 [test]
 recipe = zc.recipe.testrunner
 eggs = zeit.content.article
-defaults = ['--tests-pattern', '^f?test$', 
-            '-v', '-c']
+defaults = ['-v', '-c']
 
 [i18n]
 recipe = lovely.recipe:i18n
