- Keine eigene Translationdomain mehr, Übersetzungen via zeit.locales.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 develop = .
 extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
 parts = lxml
-        test i18n importchecker
+        test importchecker
 
 [lxml]
 recipe = z3c.recipe.staticlxml
@@ -14,15 +14,6 @@ libxslt-url = http://xmlsoft.org/sources/libxslt-1.1.24.tar.gz
 recipe = zc.recipe.testrunner
 eggs = zeit.content.article
 defaults = ['-v', '-c']
-
-[i18n]
-recipe = lovely.recipe:i18n
-package = zeit.content.article
-domain = zeit.content.article
-location = src/zeit
-output = content/article/locales
-zcml =
-  <include package="zeit.content.article" file="ftesting.zcml" />
 
 [importchecker]
 recipe = zc.recipe.egg
