--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,6 @@
 [buildout]
 develop = .
+          ../zeit.wysiwyg
 extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
 parts = lxml
         test importchecker
