Re #5491: implemented layout property for Articles (that references a CenterPage)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,7 @@
 [buildout]
 develop = .
+          ../zeit.wysiwyg
+          ../zeit.content.cp
 extends = http://svn.gocept.com/repos/gocept/zopeversions/zope-stable.cfg
 parts = lxml
         test importchecker
